<resources>
    <string name="app_name">Renegade Server List</string>
    <string name="title_server_list">Server List</string>
    <string name="title_launcher_remote">Launcher Remote</string>
    <string name="title_settings">Settings</string>

    <string name="title_application_settings">Application Settings</string>
    <string name="title_notification_settings">Notification Settings</string>
    <string name="title_import_export_settings">Import or Export Settings</string>

    <string name="server_info_map">Map</string>
    <string name="server_info_next_map">Next Map</string>
    <string name="server_info_region">Region</string>
    <string name="server_info_players">Players</string>
    <string name="server_info_time_elapsed">Time</string>
    <string name="server_info_time_left">Time Left</string>
    <string name="server_info_channel">Channel</string>
    <string name="server_info_version">Version</string>

    <string name="server_info_name">Name</string>
    <string name="server_info_score">Score</string>
    <string name="server_info_kills">Kills</string>
    <string name="server_info_deaths">Deaths</string>
    <string name="server_info_ping">Ping</string>

    <string name="server_setting_notify_number_of_players">Notify if server reaches number of players</string>
    <string name="server_setting_notify_preferred_map">Notify if server starts map (partial match)</string>
    <string name="server_setting_notify_player_joins">Notify if player joins server (exact match)</string>

    <string name="setting_in_game_name">Your in-game name</string>
    <string name="setting_automatically_refresh_server_list">Automatically refresh server list?</string>
    <string name="setting_refresh_interval_minutes">Refresh interval in minutes</string>
    <string name="setting_refresh_metered_connection">Refresh on metered connections?</string>
    <string name="setting_notify_number_of_players">Notify if any server reaches number of players</string>
    <string name="setting_notify_preferred_map">Notify if any server starts map (partial match)</string>
    <string name="setting_notify_player_joins">Notify if player joins any server (exact match)</string>
    <string name="setting_notify_multiple_conditions_met">Notify only if multiple conditions are met?</string>
</resources>