<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/server_item_padding_left_right"
        android:layout_marginTop="@dimen/server_item_margin"
        android:layout_marginEnd="@dimen/server_item_padding_left_right"
        android:layout_marginBottom="@dimen/server_item_padding_top_bottom"
        android:background="@drawable/shape_card"
        android:orientation="horizontal"
        android:paddingStart="@dimen/server_item_padding_left_right"
        android:paddingTop="@dimen/server_item_padding_top_bottom"
        android:paddingEnd="@dimen/server_item_padding_left_right"
        android:paddingBottom="@dimen/server_item_padding_top_bottom">

        <ImageView
            android:id="@+id/server_app_icon"
            android:layout_width="@dimen/server_icon_size"
            android:layout_height="@dimen/server_icon_size"
            android:background="@drawable/application_default_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/server_item_padding_left_right"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:maxLines="1"
                android:text="@string/server_info_map" />

            <TextView
                android:id="@+id/server_current_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="RA_GuardDuty.mix"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/server_item_padding"
                android:fontFamily="sans-serif-black"
                android:maxLines="1"
                android:text="@string/server_info_next_map" />

            <TextView
                android:id="@+id/server_next_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="RA_Complex.mix"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/server_item_padding"
                android:fontFamily="sans-serif-black"
                android:maxLines="1"
                android:text="@string/server_info_region" />

            <TextView
                android:id="@+id/server_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="South America"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/server_item_padding_left_right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:maxLines="1"
                android:text="@string/server_info_ping" />

            <TextView
                android:id="@+id/server_ping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="107ms"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/server_item_padding"
                android:fontFamily="sans-serif-black"
                android:maxLines="1"
                android:text="@string/server_info_time_elapsed" />

            <TextView
                android:id="@+id/server_time_elapsed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="127:49:31"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/server_item_padding"
                android:fontFamily="sans-serif-black"
                android:maxLines="1"
                android:text="@string/server_info_channel" />

            <TextView
                android:id="@+id/server_channel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="release"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/server_item_padding_left_right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:maxLines="1"
                android:text="@string/server_info_players" />

            <TextView
                android:id="@+id/server_player_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="127/127"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/server_item_padding"
                android:fontFamily="sans-serif-black"
                android:maxLines="1"
                android:text="@string/server_info_time_left" />

            <TextView
                android:id="@+id/server_time_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="06:27:13"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/server_item_padding"
                android:fontFamily="sans-serif-black"
                android:maxLines="1"
                android:text="@string/server_info_version" />

            <TextView
                android:id="@+id/server_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="0.9935.0.12"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>