<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/server_item_padding_left_right"
        android:layout_marginTop="@dimen/server_item_padding_top_bottom"
        android:layout_marginEnd="@dimen/server_item_padding_left_right"
        android:layout_marginBottom="@dimen/server_item_padding_top_bottom"
        android:background="@drawable/shape_card"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/server_item_padding"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/server_app_icon"
                android:layout_width="@dimen/server_icon_size"
                android:layout_height="@dimen/server_icon_size"
                app:srcCompat="@drawable/icon_woa" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/server_item_padding_left_right"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:text="{TEAM_NAME}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView21"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/server_item_padding_left_right"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/server_info_score" />

                        <TextView
                            android:id="@+id/textView22"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/server_item_padding_left_right"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/server_info_kills" />

                        <TextView
                            android:id="@+id/textView23"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/server_item_padding_left_right"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/server_info_deaths" />

                        <TextView
                            android:id="@+id/textView24"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/server_info_players" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView210"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/server_item_padding_left_right"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:maxLines="1"
                            android:text="{200,200}" />

                        <TextView
                            android:id="@+id/textView220"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/server_item_padding_left_right"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:maxLines="1"
                            android:text="9,999" />

                        <TextView
                            android:id="@+id/textView230"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/server_item_padding_left_right"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:maxLines="1"
                            android:text="4,500" />

                        <TextView
                            android:id="@+id/textView240"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:maxLines="1"
                            android:text="127/127" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/background_dark"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/server_item_padding"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2400"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/server_item_padding_left_right"
                            android:layout_weight="3"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/server_info_name" />

                        <TextView
                            android:id="@+id/textView2100"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/server_item_padding_left_right"
                            android:layout_weight="1.25"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/server_info_score" />

                        <TextView
                            android:id="@+id/textView2200"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/server_item_padding_left_right"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/server_info_kills" />

                        <TextView
                            android:id="@+id/textView2003"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/server_item_padding_left_right"
                            android:layout_weight="1.25"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/server_info_deaths" />


                        <TextView
                            android:id="@+id/textView2202"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/server_item_padding_left_right"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/server_info_ping" />

                        <TextView
                            android:id="@+id/textView2023"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/server_info_time_elapsed" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView21000"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/server_item_padding_left_right"
                            android:layout_weight="3"
                            android:fontFamily="sans-serif"
                            android:maxLines="1"
                            android:text="{SteelGhostSteelGhost}" />

                        <TextView
                            android:id="@+id/textView22000"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/server_item_padding_left_right"
                            android:layout_weight="1.25"
                            android:fontFamily="sans-serif"
                            android:maxLines="1"
                            android:text="99,999" />

                        <TextView
                            android:id="@+id/textView23000"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/server_item_padding_left_right"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:maxLines="1"
                            android:text="4,500" />

                        <TextView
                            android:id="@+id/textView24000"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/server_item_padding_left_right"
                            android:layout_weight="1.25"
                            android:fontFamily="sans-serif"
                            android:maxLines="1"
                            android:text="9,999" />


                        <TextView
                            android:id="@+id/textView230600"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/server_item_padding_left_right"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:maxLines="1"
                            android:text="9,999" />

                        <TextView
                            android:id="@+id/textView240600"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:fontFamily="sans-serif"
                            android:maxLines="1"
                            android:text="00:00:00" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>